feat: add pagination to getLessons endpoint